2.10.8:

2007-03-03  Alan Ott  <alan@signal11.us>

	* docs/tutorial/gtkmm-tut.xml: Added a new appendix, about using 
	Visual Studio 2005.
	* docs/tutorial/figures/Makefile.am: Mention new screenshots, for the 
	new appendix.
	Bug #409102

2007-02-15  Murray Cumming,  <murrayc@murrayc.com>

	* gdk/src/dragcontext.ccg: Use GDK_POINTER_TO_ATOM() instead of a simple 
	cast, which is more like GTK+ public API.

2007-02-11  Marko Anastasov  <marko@marko.anastasov.name>

	* docs/tutorial/gtkmm-tut.xml: Updated chapter on internationalization.
	Explains how to set up an autotools-based project, the use of intltool,
	basic instructions how to add a translation and a resources list.

2007-01-28  Daniel Elstner  <daniel.kitta@gmail.com>

	* gtk/src/actiongroup.ccg (ActionGroup::add): Don't use NULL but
	static_cast<char*>(0) to terminate the g_object_get() varargs list,
	to prevent serious breakage on 64-bit systems without GCC magic.
	Please, everyone, do me a favor and don't use NULL in C++ code,
	especially not in conjunction with varargs.  Thanks.

2.10.7:

2007-01-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.ccg: Destructor: Call the cleanup functions, instead of calling 
	init again. This seems to be a copy/paste error from April 2003. 
	Bug #383340 from Christopher Raine.

2007-01-20  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Add a Google search, restricted to the gtkmm documentation.

2007-01-12  Marko Anastasov  <marko@marko.anastasov.name>

	* gtk/src/printoperation.ccg: Specify a template specialization for
	Glib::unwrap() to avoid ambiguities detected and reported as errors
	in Sun Workshop on OpenSolaris. Bug #395572 from Tim Mooney.

2006-12-21  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: libglade with derived widgets: Add more explanation 
	about the BaseObjectType typedef.
	Patch from Martin Nordholts in bug #387708.

2006-12-11  Murray Cumming  <murrayc@murrayc.com>
