@@ -1356,6 +1356,24 @@ with a pixbuf created by loading the image from @filename.
 </parameters>
 </function>
 
+<function name="gtk_icon_theme_get_example_icon_name">
+<description>
+Gets the name of an icon that is representative of the
+current theme (for instance, to use when presenting
+a list of themes to the user.)
+
+Since: 2.4
+</description>
+<parameters>
+<parameter name="icon_theme">
+<parameter_description> a #GtkIconTheme
+</parameter_description>
+</parameter>
+</parameters>
+<return>
+</return>
+</function>
+
 <function name="gtk_file_chooser_add_shortcut_folder">
 <parameters>
 <parameter name="chooser">
