@@ -1,3 +1,9 @@
+2007-03-09  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* gtk/src/gtk_docs_override.xml: fix documentation of
+	IconTheme::get_example_icon_name() so that it doesn't imply that the
+	returned ustring needs to be freed.
+
 2.10.8:
 
 2007-03-03  Alan Ott  <alan@signal11.us>
